--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -7,43 +7,49 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive rating component</title>
-
+<link rel="stylesheet" href="style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+ 
 </head>
 <body>
 
   <!-- Rating state start -->
+<div class="container">
+  <img src="/interactive-rating-component-main/images/icon-star.svg" alt="">
+<h2> How did we do?</h2>
 
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
+  <p> Please let us know how we did with your support request. All feedback is appreciated 
   to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
+</p>
+<div class="buttons">
+<button class="rating">1</button>
+<button class="rating">2</button>
+<button class="rating">3</button>
+<button class="rating">4</button>
+<button class="rating">5</button>
+</div>
+<button class="submit-response">SUBMIT</button>
+</div>
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
+  <div class="container2">
+    <img src="/interactive-rating-component-main/images/illustration-thank-you.svg" alt="">
+    <p class="user-Rating">
+  You selected <span  class="addValue"></span> out of 5</p>
 
-  You selected <!-- Add rating here --> out of 5
+  <h2>Thank you!</h2>
 
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+ <p> We appreciate you taking the time to give a rating. If you ever need more support, 
+  don’t hesitate to get in touch!</p>
 
   <!-- Thank you state end -->
 
-  
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Gourav Kumar</a>.
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
