--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Rating state start -->
 <div class="container">
-  <img src="/interactive-rating-component-main/images/icon-star.svg" alt="">
+  <img src="images/icon-star.svg" alt="">
 <h2> How did we do?</h2>
 
   <p> Please let us know how we did with your support request. All feedback is appreciated 
@@ -34,7 +34,7 @@
 
   <!-- Thank you state start -->
   <div class="container2">
-    <img src="/interactive-rating-component-main/images/illustration-thank-you.svg" alt="">
+    <img src="images/illustration-thank-you.svg" alt="">
     <p class="user-Rating">
   You selected <span  class="addValue"></span> out of 5</p>
 
